--- a/config/config.toml
+++ b/config/config.toml
@@ -1,12 +1,12 @@
 [viewer]
-    Title = "dddve Go语言博客"
-    Description = "dddve Go语言博客"
+    Title = "fangsong Go语言博客"
+    Description = "fangsong Go语言博客"
     Logo = "/resource/images/logo.png"
     Navigation = ["首页","/", "GO语言","/golang", "归档","/pigeonhole", "关于","/about"]
     Bilibili = "https://space.bilibili.com/473844125"
     Zhihu = "https://www.zhihu.com/people/ma-shen-zhi-lu"
-    Avatar = "https://gimg2.baidu.com/image_search/src=http%3A%2F%2Finews.gtimg.com%2Fnewsapp_bt%2F0%2F13147603927%2F1000.jpg&refer=http%3A%2F%2Finews.gtimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1647242040&t=c6108010ed46b4acebe18955acdd2d24"
-    UserName = "dddve"
+    Avatar = "https://xfile2.a.88cdn.com/file/k/852810026/avatar/B7oFPg_tg-NTQ1Mw==.jpg"
+    UserName = "fangsong"
     UserDesc = "长得非常帅的程序员"
 [system]
     CdnURL = "https://static.mszlu.com/goblog/es6/md-assets"
